--- a/index.html
+++ b/index.html
@@ -1,86 +1,144 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Cubo 3D Azul Futurista</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página de Mateo 6-2</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background: black;
+      color: #00ff00;
+      font-family: 'Courier New', Courier, monospace;
+      overflow: hidden;
+    }
 
-<style>
-/* Reset básico */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    /* Canvas Matrix */
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
 
-body, html {
-  width: 100%;
-  height: 100%;
-  background: #000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  perspective: 1200px;
-  overflow: hidden;
-}
+    /* Contenedor principal */
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
 
-/* Contenedor del cubo */
-.cube-container {
-  width: 200px;
-  height: 200px;
-  transform-style: preserve-3d;
-  animation: rotateCube 8s linear infinite;
-  position: relative;
-}
+    /* Texto animado estilo hacker */
+    .typing-text {
+      font-size: 2rem;
+      color: #00ff00;
+      text-shadow: 0 0 10px #00ff00;
+      border-right: 2px solid #00ff00;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 0;
+      animation: typing 4s steps(30, end) infinite alternate,
+                 blink 0.7s infinite;
+    }
 
-/* Caras del cubo */
-.cube-face {
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background: linear-gradient(135deg, #0066ff, #00ccff);
-  border: 1px solid rgba(255,255,255,0.1);
-  opacity: 0.95;
-  box-shadow: 0 0 20px #00f, 0 0 40px #00f, 0 0 60px #00f inset;
-  transition: 0.3s;
-}
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 25ch; }
+    }
 
-/* Posicionamiento de cada cara */
-.cube-face:nth-child(1){ transform: rotateY(0deg) translateZ(100px);}
-.cube-face:nth-child(2){ transform: rotateY(90deg) translateZ(100px);}
-.cube-face:nth-child(3){ transform: rotateY(180deg) translateZ(100px);}
-.cube-face:nth-child(4){ transform: rotateY(270deg) translateZ(100px);}
-.cube-face:nth-child(5){ transform: rotateX(90deg) translateZ(100px);}
-.cube-face:nth-child(6){ transform: rotateX(-90deg) translateZ(100px);}
+    @keyframes blink {
+      50% { border-color: transparent; }
+    }
 
-/* Animación de rotación */
-@keyframes rotateCube {
-  0% { transform: rotateX(-15deg) rotateY(0deg); }
-  100% { transform: rotateX(-15deg) rotateY(360deg); }
-}
+    /* ================== NUEVO BOTÓN ================== */
+    .download-btn {
+      margin-top: 20px;
+    }
 
-/* Glow radial alrededor del cubo */
-.cube-container::before {
-  content: '';
-  position: absolute;
-  top: -50px; left: -50px;
-  width: 300px; height: 300px;
-  background: radial-gradient(circle, rgba(0,102,255,0.3) 0%, transparent 70%);
-  filter: blur(40px);
-  z-index: -1;
-}
-</style>
+    .download-btn button {
+      width: 165px;
+      height: 62px;
+      cursor: pointer;
+      color: #fff;
+      font-size: 17px;
+      border-radius: 1rem;
+      border: none;
+      position: relative;
+      background: #100720;
+      transition: 0.1s;
+    }
+
+    .download-btn button::after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
+      filter: blur(15px);
+      z-index: -1;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+
+    .download-btn button:active {
+      transform: scale(0.9) rotate(3deg);
+      background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
+      transition: 0.5s;
+    }
+
+  </style>
 </head>
 <body>
+  <canvas id="matrix"></canvas>
+  <div class="container">
+    <div class="typing-text">El mejor grupo de la exposición...</div>
 
-<div class="cube-container">
-  <div class="cube-face"></div>
-  <div class="cube-face"></div>
-  <div class="cube-face"></div>
-  <div class="cube-face"></div>
-  <div class="cube-face"></div>
-  <div class="cube-face"></div>
-</div>
+    <!-- Botón de Descargar -->
+    <div class="download-btn">
+      <a href="video.mp4" download>
+        <button>Descargar</button>
+      </a>
+    </div>
+  </div>
 
+  <script>
+    // ============= ANIMACIÓN MATRIX =============
+    const canvas = document.getElementById("matrix");
+    const ctx = canvas.getContext("2d");
+
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
+
+    const letters = "01";
+    const fontSize = 16;
+    const columns = canvas.width / fontSize;
+
+    const drops = [];
+    for (let x = 0; x < columns; x++) drops[x] = 1;
+
+    function draw() {
+      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      ctx.fillStyle = `hsl(${Math.random()*360},100%,50%)`;
+      ctx.font = fontSize + "px monospace";
+
+      for (let i = 0; i < drops.length; i++) {
+        const text = letters.charAt(Math.floor(Math.random() * letters.length));
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
+        drops[i]++;
+      }
+    }
+
+    setInterval(draw, 35);
+  </script>
 </body>
 </html>
