--- a/index.html
+++ b/index.html
@@ -3,196 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Mateo 6-2</title>
+  <title>Cielo Nocturno Animado</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
-
     body {
       margin: 0;
       height: 100vh;
-      background: black;
-      color: #00ff00;
-      font-family: 'Courier New', Courier, monospace;
-      overflow: hidden;
-      position: relative;
-    }
-
-    /* Canvas Matrix */
-    canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -2;
-    }
-
-    /* Canvas Estrellas */
-    #starsCanvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -3;
-    }
-
-    /* Contenedor principal */
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-      position: relative;
-      z-index: 1;
-    }
-
-    /* Texto animado estilo hacker */
-    .typing-text {
-      font-size: 2rem;
-      color: #00ff00;
-      text-shadow: 0 0 10px #00ff00;
-      border-right: 2px solid #00ff00;
-      white-space: nowrap;
-      overflow: hidden;
-      width: 0;
-      animation: typing 4s steps(30, end) infinite alternate,
-                 blink 0.7s infinite;
-    }
-
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 25ch; }
-    }
-
-    @keyframes blink {
-      50% { border-color: transparent; }
-    }
-
-    /* Botón Descarga */
-    .download-btn {
-      margin-top: 20px;
-    }
-
-    .download-btn button {
-      width: 165px;
-      height: 62px;
-      cursor: pointer;
-      color: #fff;
-      font-size: 17px;
-      border-radius: 1rem;
-      border: none;
-      position: relative;
-      background: #100720;
-      transition: 0.1s;
+      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
       overflow: hidden;
     }
 
-    .download-btn button::after {
-      content: '';
-      width: 100%;
-      height: 100%;
-      background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
-      filter: blur(15px);
-      z-index: -1;
+    .estrella {
       position: absolute;
-      left: 0;
-      top: 0;
+      width: 2px;
+      height: 2px;
+      background: white;
+      border-radius: 50%;
+      animation: brillar 2s infinite alternate;
     }
 
-    .download-btn button:active {
-      transform: scale(0.9) rotate(3deg);
-      background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
-      transition: 0.5s;
-    }
-
-    /* Robot animado fondo */
-    #robot {
-      position: fixed;
-      bottom: 0;
-      left: -150px;
-      width: 150px;
-      animation: moveRobot 20s linear infinite;
-      z-index: -1;
-    }
-
-    @keyframes moveRobot {
-      0% { left: -150px; }
-      50% { left: 50%; transform: translateX(-50%) rotate(0deg);}
-      100% { left: 100%; }
+    @keyframes brillar {
+      from { opacity: 0.2; transform: scale(1); }
+      to   { opacity: 1; transform: scale(1.5); }
     }
   </style>
 </head>
 <body>
-  <!-- Canvas para estrellas -->
-  <canvas id="starsCanvas"></canvas>
-
-  <!-- Canvas Matrix -->
-  <canvas id="matrix"></canvas>
-
-  <!-- Robot animado -->
-  <img id="robot" src="https://i.imgur.com/4aiRv0K.png" alt="robot">
-
-  <div class="container">
-    <div class="typing-text">El mejor grupo de la exposición...</div>
-
-    <!-- Botón de Descargar -->
-    <div class="download-btn">
-      <a href="video.mp4" download>
-        <button>Descargar</button>
-      </a>
-    </div>
-  </div>
-
   <script>
-    // ================== MATRIX ==================
-    const canvas = document.getElementById("matrix");
-    const ctx = canvas.getContext("2d");
-    canvas.height = window.innerHeight;
-    canvas.width = window.innerWidth;
-    const letters = "01";
-    const fontSize = 16;
-    const columns = canvas.width / fontSize;
-    const drops = Array.from({length: columns}, () => 1);
-
-    function drawMatrix() {
-      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-      ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = `hsl(${Math.random()*360},100%,50%)`;
-      ctx.font = fontSize + "px monospace";
-      for (let i = 0; i < drops.length; i++) {
-        const text = letters.charAt(Math.floor(Math.random() * letters.length));
-        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[i] = 0;
-        drops[i]++;
-      }
+    // Crear 100 estrellas en posiciones aleatorias
+    for (let i = 0; i < 100; i++) {
+      let estrella = document.createElement("div");
+      estrella.className = "estrella";
+      estrella.style.top = Math.random() * 100 + "vh";
+      estrella.style.left = Math.random() * 100 + "vw";
+      estrella.style.animationDuration = (1 + Math.random() * 2) + "s";
+      document.body.appendChild(estrella);
     }
-    setInterval(drawMatrix, 35);
-
-    // ================== ESTRELLAS ==================
-    const starsCanvas = document.getElementById("starsCanvas");
-    const sCtx = starsCanvas.getContext("2d");
-    starsCanvas.width = window.innerWidth;
-    starsCanvas.height = window.innerHeight;
-    const stars = Array.from({length: 200}, () => ({
-      x: Math.random() * starsCanvas.width,
-      y: Math.random() * starsCanvas.height,
-      size: Math.random() * 2,
-      speed: Math.random() * 0.5 + 0.2
-    }));
-
-    function drawStars() {
-      sCtx.fillStyle = "black";
-      sCtx.fillRect(0, 0, starsCanvas.width, starsCanvas.height);
-      sCtx.fillStyle = "white";
-      stars.forEach(star => {
-        sCtx.beginPath();
-        sCtx.arc(star.x, star.y, star.size, 0, Math.PI * 2);
-        sCtx.fill();
-        star.y += star.speed;
-        if (star.y > starsCanvas.height) star.y = 0;
-      });
-      requestAnimationFrame(drawStars);
-    }
-    drawStars();
   </script>
 </body>
 </html>
