--- a/index.html
+++ b/index.html
@@ -1,205 +1,144 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Teamo Celeste 💖</title>
-<style>
-  body {
-    margin: 0;
-    background: black;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: 'Courier New', monospace;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Página de Mateo 6-2</title>
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background: black;
+      color: #00ff00;
+      font-family: 'Courier New', Courier, monospace;
+      overflow: hidden;
+    }
 
-  canvas {
-    position: absolute;
-    top:0;
-    left:0;
-  }
+    /* Canvas Matrix */
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
 
-  #message {
-    position: absolute;
-    font-size: 3rem;
-    color: #00ffff;
-    text-align: center;
-    opacity: 0;
-    text-shadow: 0 0 15px #00ffff, 0 0 30px #00ffff;
-    letter-spacing: 3px;
-  }
-</style>
+    /* Contenedor principal */
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+
+    /* Texto animado estilo hacker */
+    .typing-text {
+      font-size: 2rem;
+      color: #00ff00;
+      text-shadow: 0 0 10px #00ff00;
+      border-right: 2px solid #00ff00;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 0;
+      animation: typing 4s steps(30, end) infinite alternate,
+                 blink 0.7s infinite;
+    }
+
+    @keyframes typing {
+      from { width: 0; }
+      to { width: 25ch; }
+    }
+
+    @keyframes blink {
+      50% { border-color: transparent; }
+    }
+
+    /* ================== NUEVO BOTÓN ================== */
+    .download-btn {
+      margin-top: 20px;
+    }
+
+    .download-btn button {
+      width: 165px;
+      height: 62px;
+      cursor: pointer;
+      color: #fff;
+      font-size: 17px;
+      border-radius: 1rem;
+      border: none;
+      position: relative;
+      background: #100720;
+      transition: 0.1s;
+    }
+
+    .download-btn button::after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
+      filter: blur(15px);
+      z-index: -1;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+
+    .download-btn button:active {
+      transform: scale(0.9) rotate(3deg);
+      background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
+      transition: 0.5s;
+    }
+
+  </style>
 </head>
 <body>
-<canvas id="canvas"></canvas>
-<div id="message"></div>
+  <canvas id="matrix"></canvas>
+  <div class="container">
+    <div class="typing-text">El mejor grupo de la exposición...</div>
 
-<script>
-const canvas = document.getElementById('canvas');
-const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
+    <!-- Botón de Descargar -->
+    <div class="download-btn">
+      <a href="video.mp4" download>
+        <button>Descargar</button>
+      </a>
+    </div>
+  </div>
 
-const centerX = canvas.width/2;
-const centerY = canvas.height/2;
+  <script>
+    // ============= ANIMACIÓN MATRIX =============
+    const canvas = document.getElementById("matrix");
+    const ctx = canvas.getContext("2d");
 
-// Mini partículas para explosión de letras
-class MiniParticle {
-  constructor(x,y,color,size){
-    this.x = x;
-    this.y = y;
-    this.vx = (Math.random()-0.5)*5;
-    this.vy = (Math.random()-0.5)*5 -1;
-    this.alpha = 1;
-    this.color = color;
-    this.size = size;
-  }
-  update(){
-    this.x += this.vx;
-    this.y += this.vy;
-    this.vy += 0.03;
-    this.alpha -= 0.02;
-  }
-  draw(){
-    ctx.globalAlpha = this.alpha;
-    ctx.fillStyle = this.color;
-    ctx.beginPath();
-    ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
-    ctx.fill();
-    ctx.globalAlpha = 1;
-  }
-}
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
 
-// Crear partículas del corazón flotante
-let heartParticles = [];
-function createHeartParticles(){
-  for(let i=0;i<600;i++){
-    let t = Math.random()*Math.PI*2;
-    let r = Math.random();
-    let x = 16*Math.pow(Math.sin(t),3);
-    let y = 13*Math.cos(t)-5*Math.cos(2*t)-2*Math.cos(3*t)-Math.cos(4*t);
-    x *= 12*r;
-    y *= 12*r;
-    heartParticles.push({
-      x: centerX + x,
-      y: centerY - y,
-      baseX: centerX + x,
-      baseY: centerY - y,
-      vx:0,
-      vy:0,
-      alpha:1,
-      color:'red',
-      size:2+Math.random()*2
-    });
-  }
-}
+    const letters = "01";
+    const fontSize = 16;
+    const columns = canvas.width / fontSize;
 
-createHeartParticles();
+    const drops = [];
+    for (let x = 0; x < columns; x++) drops[x] = 1;
 
-let explode = false;
-let explodedParticles = [];
-let extraParticles = [];
-let angle=0;
+    function draw() {
+      ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-// Animación del corazón
-function animate(){
-  ctx.fillStyle = 'rgba(0,0,0,0.15)';
-  ctx.fillRect(0,0,canvas.width,canvas.height);
+      ctx.fillStyle = `hsl(${Math.random()*360},100%,50%)`;
+      ctx.font = fontSize + "px monospace";
 
-  angle +=0.05;
-  let offsetX = Math.sin(angle)*30;
-  let offsetY = Math.cos(angle)*20;
+      for (let i = 0; i < drops.length; i++) {
+        const text = letters.charAt(Math.floor(Math.random() * letters.length));
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
 
-  if(!explode){
-    heartParticles.forEach(p=>{
-      let a = Math.random()*Math.PI*2;
-      let r = Math.random()*2;
-      p.vx = Math.cos(a)*r;
-      p.vy = Math.sin(a)*r;
-      p.x = p.baseX + p.vx + offsetX;
-      p.y = p.baseY + p.vy + offsetY;
-
-      ctx.globalAlpha = p.alpha;
-      ctx.fillStyle = p.color;
-      ctx.beginPath();
-      ctx.arc(p.x,p.y,p.size,0,Math.PI*2);
-      ctx.fill();
-      ctx.globalAlpha = 1;
-    });
-  }
-
-  if(explode){
-    if(heartParticles.length>0){
-      heartParticles.forEach(p=>{
-        for(let i=0;i<4;i++){
-          explodedParticles.push(new MiniParticle(p.x,p.y,'red',2+Math.random()*2));
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
         }
-        for(let i=0;i<2;i++){
-          extraParticles.push(new MiniParticle(p.x,p.y,'#ff66ff',1+Math.random()*2));
-        }
-      });
-      heartParticles=[];
+        drops[i]++;
+      }
     }
 
-    explodedParticles.forEach((p,i)=>{
-      p.update();
-      p.draw();
-      if(p.alpha<=0) explodedParticles.splice(i,1);
-    });
-    extraParticles.forEach((p,i)=>{
-      p.update();
-      p.draw();
-      if(p.alpha<=0) extraParticles.splice(i,1);
-    });
-
-    if(Math.random()<0.03){
-      explodedParticles.push(new MiniParticle(centerX + (Math.random()-0.5)*200, centerY + (Math.random()-0.5)*200,'#ff0040',2+Math.random()*2));
-      explodedParticles.push(new MiniParticle(centerX + (Math.random()-0.5)*200, centerY + (Math.random()-0.5)*200,'#ff8000',2+Math.random()*2));
-    }
-  }
-
-  requestAnimationFrame(animate);
-}
-
-animate();
-
-// Explosión después de 3 segundos
-setTimeout(()=>{ explode=true; },3000);
-
-// Mostrar "Teamo Celeste" letra por letra como fuegos artificiales
-const messageEl = document.getElementById('message');
-const messageText = "Teamo Celeste 💖";
-let currentIndex = 0;
-
-function showNextLetter(){
-  if(currentIndex < messageText.length){
-    messageEl.textContent += messageText[currentIndex];
-
-    // Mini explosión de partículas en cada letra
-    const letterX = centerX - messageText.length*12 + currentIndex*24;
-    const letterY = centerY + 150;
-    for(let i=0;i<8;i++){
-      explodedParticles.push(new MiniParticle(letterX + (Math.random()-0.5)*20, letterY + (Math.random()-0.5)*10,'#00ffff',1+Math.random()*2));
-    }
-
-    currentIndex++;
-    setTimeout(showNextLetter,200); // velocidad de escritura
-  }
-}
-
-// Iniciar escritura después de 5 segundos
-setTimeout(()=>{
-  messageEl.style.opacity = 1;
-  showNextLetter();
-},5000);
-
-</script>
+    setInterval(draw, 35);
+  </script>
 </body>
 </html>
-
-
-
-
