--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
       z-index: -1;
     }
 
+    /* ==== LINEAS ANIMADAS EN EL FONDO ==== */
+    .lines {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      overflow: hidden;
+      z-index: -1;
+    }
+
+    .line {
+      position: absolute;
+      width: 2px;
+      height: 100%;
+      background: rgba(0, 255, 0, 0.2);
+      animation: fall 5s linear infinite;
+    }
+
+    @keyframes fall {
+      from { transform: translateY(-100%); }
+      to { transform: translateY(100%); }
+    }
+
+    /* ==== CONTENEDOR CENTRAL ==== */
     .container {
       display: flex;
       flex-direction: column;
@@ -32,67 +57,81 @@
       position: relative;
     }
 
+    /* ==== TEXTO CON EFECTO GLITCH ==== */
     .typing-text {
       font-size: 2rem;
       color: #00ff00;
       text-shadow: 0 0 10px #00ff00;
-      border-right: 2px solid #00ff00;
-      white-space: nowrap;
-      overflow: hidden;
-      width: 0;
-      animation: typing 4s steps(30, end) infinite alternate,
-                 blink 0.7s infinite;
+      position: relative;
+      animation: glitch 2s infinite;
     }
 
-    @keyframes typing {
-      from { width: 0; }
-      to { width: 25ch; }
+    @keyframes glitch {
+      0% { text-shadow: 2px 2px #ff00ff, -2px -2px #00ffff; }
+      20% { text-shadow: -2px -2px #ff00ff, 2px 2px #00ffff; }
+      40% { text-shadow: 2px -2px #ff00ff, -2px 2px #00ffff; }
+      60% { text-shadow: -2px 2px #ff00ff, 2px -2px #00ffff; }
+      80% { text-shadow: 2px 2px #ff00ff, -2px -2px #00ffff; }
+      100% { text-shadow: none; }
     }
 
-    @keyframes blink {
-      50% { border-color: transparent; }
-    }
-
+    /* ==== BOTÓN FUTURISTA ==== */
     .download-btn {
       margin-top: 20px;
     }
 
     .download-btn button {
-      width: 165px;
-      height: 62px;
+      width: 180px;
+      height: 60px;
       cursor: pointer;
       color: #fff;
       font-size: 17px;
       border-radius: 1rem;
       border: none;
       position: relative;
-      background: #100720;
-      transition: 0.1s;
+      background: #0a0f0a;
+      overflow: hidden;
+      box-shadow: 0 0 20px #00ff00;
+      transition: 0.3s;
     }
 
-    .download-btn button::after {
-      content: '';
-      width: 100%;
-      height: 100%;
-      background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
-      filter: blur(15px);
-      z-index: -1;
+    .download-btn button::before {
+      content: "";
       position: absolute;
-      left: 0;
-      top: 0;
+      width: 300%;
+      height: 300%;
+      background: conic-gradient(#0f0, #0ff, #0f0, #0ff);
+      top: -100%;
+      left: -100%;
+      animation: rotate 3s linear infinite;
+      z-index: -1;
     }
 
-    .download-btn button:active {
-      transform: scale(0.9) rotate(3deg);
-      background: radial-gradient(circle farthest-corner at 10% 20%, rgba(255,94,247,1) 17.8%, rgba(2,245,255,1) 100.2%);
-      transition: 0.5s;
+    @keyframes rotate {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
+
+    .download-btn button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 40px #00ff00;
+    }
+
   </style>
 </head>
 <body>
   <canvas id="matrix"></canvas>
   <canvas id="stars"></canvas>
   <canvas id="robot"></canvas>
+
+  <!-- Líneas de luz animadas -->
+  <div class="lines">
+    <div class="line" style="left:10%; animation-delay: 0s;"></div>
+    <div class="line" style="left:30%; animation-delay: 1s;"></div>
+    <div class="line" style="left:50%; animation-delay: 2s;"></div>
+    <div class="line" style="left:70%; animation-delay: 3s;"></div>
+    <div class="line" style="left:90%; animation-delay: 4s;"></div>
+  </div>
 
   <div class="container">
     <div class="typing-text">El mejor grupo de la exposición...</div>
@@ -118,7 +157,7 @@
     function drawMatrix() {
       ctx.fillStyle = "rgba(0,0,0,0.05)";
       ctx.fillRect(0, 0, canvas.width, canvas.height);
-      ctx.fillStyle = `hsl(${Math.random()*360},100%,50%)`;
+      ctx.fillStyle = "#00ff00";
       ctx.font = fontSize + "px monospace";
       for (let i = 0; i < drops.length; i++) {
         const text = letters.charAt(Math.floor(Math.random() * letters.length));
